fixed contact cutoff css bug for intellinote

--- a/FJSHUD/app/styles/intellinote.less
+++ b/FJSHUD/app/styles/intellinote.less
@@ -127,6 +127,10 @@
 			
 			font-size: 14px;
 		}
+		.widget-zoom-contacts{
+			
+			top:0px;
+		}
 		
 		.Workspaces {
 			position: relative;
