--- a/FJSHUD/app/styles/main.css
+++ b/FJSHUD/app/styles/main.css
@@ -5311,6 +5311,9 @@ div.NewCall .XButton.XButtonNormal {
 .Widget.Intellinote .Right .Contacts {
   font-size: 14px;
 }
+.Widget.Intellinote .Right .widget-zoom-contacts {
+  top: 0px;
+}
 .Widget.Intellinote .Right .Workspaces {
   position: relative;
 }
